Changes done: * fixed image size on mobile view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,4 +5,14 @@
     width: 100%;
     z-index: 999;
   }
+
+  .carousel-img {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .carousel-img {
+    width: 100%;
+  }
 }
